# axelar-relayer-core

./: .dockerignore  .gitignore  Cargo.toml  README.md  config-example.toml  docker-compose.gcp.yaml  docker-compose.nats.yaml  docker-compose.open-telemetry.yml  otel-collector-config.yaml  relayer-config-example.toml
.github/workflows/: docker-build-check.yml
crates/amplifier-api/: Cargo.toml
crates/amplifier-api/src/: big_int.rs  client.rs  types.rs
crates/amplifier-api/src/client/: requests.rs
crates/amplifier-ingester/: Cargo.toml  Dockerfile
crates/amplifier-ingester/src/: config.rs  lib.rs  main.rs  metrics.rs
crates/amplifier-ingester/src/components/: gcp.rs  nats.rs
crates/amplifier-subscriber/: Cargo.toml  Dockerfile
crates/amplifier-subscriber/src/: config.rs  lib.rs  main.rs  metrics.rs
crates/amplifier-subscriber/src/components/: gcp.rs  nats.rs
crates/bin-util/: Cargo.toml
crates/bin-util/src/: health_check.rs  lib.rs  telemetry.rs
crates/infrastructure/: Cargo.toml  README.md
crates/infrastructure/src/: gcp.rs  interfaces.rs  nats.rs  tracking.rs
crates/infrastructure/src/gcp/: connectors.rs  consumer.rs  kv_store.rs  publisher.rs  util.rs
crates/relayer-amplifier-api-integration/: Cargo.toml
crates/relayer-amplifier-api-integration/src/: config.rs  lib.rs
crates/retry/src/: lib.rs  retry_fn.rs  retry_pair_fn.rs
crates/supervisor/src/: lib.rs
grafana/provisioning/datasources/: loki.yaml  prometheus.yaml
telemetry/: otel-collector-config.yaml  prometheus.yaml  prometheus.yml
telemetry/grafana/provisioning/: datasources.yaml
terraform/modules/iam/: main.tf  variables.tf
terraform/modules/kms/: main.tf  variables.tf
terraform/modules/pubsub/: main.tf  variables.tf
xtask/src/: main.rs
(+3 files in other folders)
