[package]
name = "bin-util"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
ctrlc.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
axum.workspace = true
eyre.workspace = true
reqwest.workspace = true
serde_json.workspace = true
futures.workspace = true

#telemetry
opentelemetry = { version = "0.29.1", features = ["metrics"] }
opentelemetry-otlp = { version = "0.29", features = ["metrics", "grpc-tonic"] }
opentelemetry_sdk = "0.29"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "registry"] }
tracing-opentelemetry = "0.30"
serde = { version = "1", features = ["derive"] }
serde_derive = "1.0"

[lints]
workspace = true
