[package]
name = "bin-util"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
ctrlc.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
eyre.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
futures.workspace = true
config = "0.15"
opentelemetry = { version = "0.29.1", features = ["metrics"] }
opentelemetry-otlp = { version = "0.29", features = ["metrics", "grpc-tonic"] }
opentelemetry_sdk = "0.29"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "registry"] }
tracing-opentelemetry = "0.30"
# serde_derive = "1.0"
axum = "0.8"

[lints]
workspace = true
